fixed a typing misstakes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-            <div class="home__container continer grid">
+            <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
                         <a href="https://linkedin.com/in/zenayush" target="_blank" class="home__social-icon">
