--- a/index.html
+++ b/index.html
@@ -135,34 +135,35 @@
 
             <div class="about__container container grid">
                 <img src="assets/img/zenayush1.png" alt="About Me" class="about__img">
-            </div>
+            
 
-            <div class="about__data">
-                <p class="about__description">
-                    Web developer, with extersive knowledgee and years of experience, working in web technologies and
-                    Ui/Ux design, delivering quality work.
-                </p>
-                <div class="about__info">
-                    <div>
-                        <span class="about__info-title">08+</span>
-                        <span class="about__info-name">Years <br> experience</span>
+                <div class="about__data">
+                    <p class="about__description">Web developer, with extersive knowledgee and years of 
+                        experience, working in web technologies and Ui/Ux design, delivering quality work.</p>
+
+                    <div class="about__info">
+                        <div>
+                            <span class="about__info-title">08+</span>
+                            <span class="about__info-name">Years <br> experience</span>
+                        </div>
+                        <div>
+                            <span class="about__info-title">20+</span>
+                            <span class="about__info-name">Completed <br> project</span>
+                        </div>
+                        <div>
+                            <span class="about__info-title">05+</span>
+                            <span class="about__info-name">Companies <br> worked</span>
+                        </div>
                     </div>
-                    <div>
-                        <span class="about__info-title">20+</span>
-                        <span class="about__info-name">Completed <br> project</span>
+                    
+                    <div class="about__buttons">
+                        <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                            Download CV<i class="uil uil-download-alt button__icon"></i>
+                        </a>
                     </div>
-                    <div>
-                        <span class="about__info-title">05+</span>
-                        <span class="about__info-name">Companies <br> worked</span>
-                    </div>
-                </div>
-                <div class="about__buttons">
-                    <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
-                        Download CV<i class="uil uil-download-alt button__icon"></i>
-                    </a>
                 </div>
             </div>
-        </section>
+        </section>   
 
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
