--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home__blob-img" x='12' y='6' xlink:href="assets/img/zenayush3.png" />
+                                <image class="home__blob-img" x='15' y='15' xlink:href="assets/img/zenayush2.png" />
                             </g>
                         </svg>
 
@@ -693,7 +693,7 @@
                         </a>
                     </div>
 
-                    <img src="assets/img/project.png" alt="project" class="project__img">
+                    <img src="assets/img/ZenAyush3.png" alt="zenayush3" class="project__img">
                 </div>
             </div>
         </section>
