--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                         </a>
                     </div>
 
-                    <img src="assets/img/ZenAyush3.webp" alt="zenayush3" class="project__img">
+                    <img src="assets/img/zenayush3.webp" alt="zenayush3" class="project__img">
                 </div>
             </div>
         </section>
