--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Responsive Portfolio Website</title>
+    <title>My Portfolio Website</title>
 </head>
 
 <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">ZenAyush</a>
+            <a href="#" class="nav__logo">Ayush</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I'am ZenAyush</h1>
+                        <h1 class="home__title">Hi, I'am Ayush</h1>
                         <h3 class="home__subtitle">Frontend developer</h3>
                         <p class="home__description">High level experience in web design and knowledge, producing
                             quality work.</p>
@@ -143,15 +143,15 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">08+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">Years <br> experience</span>
                         </div>
                         <div>
-                            <span class="about__info-title">20+</span>
+                            <span class="about__info-title">02+</span>
                             <span class="about__info-name">Completed <br> project</span>
                         </div>
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">01+</span>
                             <span class="about__info-name">Companies <br> worked</span>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
                                 <h1 class="skills__titles">Frontend developer</h1>
-                                <span class="skills__subtitle">More than 4 years</span>
+                                <span class="skills__subtitle">More than 3 years</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">React</h3>
+                                    <h3 class="skills__name">Bootstrap</h3>
                                     <span class="skills__number">85%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -226,14 +226,14 @@
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
                                 <h1 class="skills__titles">Backend developer</h1>
-                                <span class="skills__subtitle">More than 2 years</span>
+                                <span class="skills__subtitle">More than 2 months</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">PHP</h3>
+                                    <h3 class="skills__name">PHP [Learing]</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -242,7 +242,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Node JS</h3>
+                                    <h3 class="skills__name">Node JS [Learing]</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -251,7 +251,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Firebase</h3>
+                                    <h3 class="skills__name">Firebase [Learing]</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -260,7 +260,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Python</h3>
+                                    <h3 class="skills__name">Python [Learing]</h3>
                                     <span class="skills__number">55%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -284,7 +284,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Figma</h3>
+                                    <h3 class="skills__name">Figma [Learing]</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -347,11 +347,11 @@
                         <!--==================== QUALIFICATION 1 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Computer Enginner</h3> 
-                                <span class="qualification__subtitle">Peru - University</span>
+                                <h3 class="qualification__title">High School</h3> 
+                                <span class="qualification__subtitle">SVMIC - Banda</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2009 - 2014
+                                    2016 - 2017
                                 </div>   
                             </div>
                             <div>
@@ -370,11 +370,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Web Design</h3> 
-                                <span class="qualification__subtitle">Spain - Institute</span>
+                                <h3 class="qualification__title">Intermediate</h3> 
+                                <span class="qualification__subtitle">SVMIC - Banda</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2014 - 2017
+                                    2018 - 2019
                                 </div>   
                             </div>
                         </div>
@@ -382,8 +382,8 @@
                         <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Web Development</h3> 
-                                <span class="qualification__subtitle">Peru - Institute</span>
+                                <h3 class="qualification__title">B.C.A</h3> 
+                                <span class="qualification__subtitle">MGCGV - M.P Satna</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2017 - 2019
@@ -405,11 +405,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Master in UI/UX</h3> 
-                                <span class="qualification__subtitle">Peru - Institute</span>
+                                <h3 class="qualification__title">M.C.A [Upcoming]</h3> 
+                                <span class="qualification__subtitle">UNKNOWN</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2019 - 2021
+                                    2022 - 2024
                                 </div>   
                             </div>
                         </div>
@@ -791,7 +791,7 @@
 
                         <div>
                             <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">999-777-666</span>
+                            <span class="contact__subtitle">7007358308</span>
                         </div>
                     </div>
                     <div class="contact__information">
@@ -799,7 +799,7 @@
 
                         <div>
                             <h3 class="contact__title">Location</h3>
-                            <span class="contact__subtitle">Peru - Lima Av. Balivar #123</span>
+                            <span class="contact__subtitle">Kyotra, Mukti Dham Road - Banda</span>
                         </div>
                     </div>
                     <div class="contact__information">
@@ -807,7 +807,7 @@
 
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">zenayush@viozentalks.in</span>
+                            <span class="contact__subtitle">as1087e@gmail.com</span>
                         </div>
                     </div>
                 </div>
@@ -847,7 +847,7 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">ZenAyush</h1>
+                    <h1 class="footer__title">Ayush</h1>
                     <span class="footer__subtitle">Frontend developer</span>
                 </div>
 
@@ -877,7 +877,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&#169; ZenAyush. All rights reserved</p>
+            <p class="footer__copy">&#169; Ayush. All rights reserved</p>
         </div>
     </footer>
 
