--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <span class="section__subtitle">My introduction</span>
 
             <div class="about__container container grid">
-                <img src="assets/img/zenayush1.png" alt="About Me" class="about__img">
+                <img src="assets/img/zenayush05.jpg" alt="About Me" class="about__img">
 
 
                 <div class="about__data">
@@ -700,7 +700,7 @@
                         </a>
                     </div>
 
-                    <img src="assets/img/zenayush3.webp" alt="zenayush3" class="project__img">
+                    <img src="assets/img/zenayush5.webp" alt="zenayush3" class="project__img">
                 </div>
             </div>
         </section>
